--- a/css/main.css
+++ b/css/main.css
@@ -1,103 +1,116 @@
-/* Need a CLEAR CSS ?
-============================ 
+@import 'https://fonts.googleapis.com/css?family=Droid+Sans|Roboto+Slab';
 
-html5doctor.com Reset Stylesheet
-v1.6.1
-Last Updated: 2010-09-17
-Author: Richard Clark - http://richclarkdesign.com 
-Twitter: @rich_clark
-
-
-html, body, div, span, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-abbr, address, cite, code,
-del, dfn, em, img, ins, kbd, q, samp,
-small, strong, sub, sup, var,
-b, i,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video {
-    margin:0;
-    padding:0;
-    border:0;
-    outline:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
+@keyframes fade {
+    from {opacity: 0;}
+    to {opacity: 1;}
 }
-
+* {
+  font-family: 'Helvetica Neue', sans-serif;
+}
 body {
-    line-height:1;
+  background: #105B63;
+  height: 100%;
 }
 
-article,aside,details,figcaption,figure,
-footer,header,hgroup,menu,nav,section { 
-    display:block;
+form {
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  top: 35%;
+  transition: .5s all;
 }
 
-nav ul {
-    list-style:none;
+input {
+  width: 40px;
+  font-size: 20px;
+  display: inline-block;
+  transition: all .5s;
+  text-align: center;
+  height: 50px;
+  border-radius: 10px;
+  background-color: #fff;
+  background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/Magnifying_glass_icon.svg/2000px-Magnifying_glass_icon.svg.png);
+  background-size: 40px;
+  background-repeat: no-repeat;
+  background-position: right;
 }
 
-blockquote, q {
-    quotes:none;
+input:focus {
+  width: 250px;
+  transition: all .5s;
 }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content:'';
-    content:none;
+#results{
+  margin-top: 200px;
+  margin-bottom: 20px;
 }
 
-a {
-    margin:0;
-    padding:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
+button{
+  display: none;
 }
 
-ins {
-    background-color:#ff9;
-    color:#000;
-    text-decoration:none;
+#results a, #results a:visited, #results a:active, #results a:focus {
+  text-decoration: none;
+  display: block;
+  background: #FFFAD5;
+  width: 80%;
+  opacity: 0;
+  border-radius: 10px;
+  border: 5px double #2C3E50;
+  margin: 10px auto;
+  padding: 5px 20px;
+  color: black;
+  transition: all .5s;
+  animation: fade 1s linear;
+  animation-fill-mode: forwards;
+  overflow: hidden;
+  -webkit-box-shadow: 0px 0px 32px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 32px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 32px 0px rgba(0,0,0,0.75);
 }
 
-mark {
-    background-color:#ff9;
-    color:#000; 
-    font-style:italic;
-    font-weight:bold;
+#results a:hover {
+  color: #fff;
+  background: #5075A6;
+  text-decoration: none;
+  width: 84%;
+  border-color: #FFD34E;
+  padding: 10px 20px;
+  -webkit-box-shadow: 0px 0px 70px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 70px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 70px 0px rgba(0,0,0,0.75);
 }
 
-del {
-    text-decoration: line-through;
+#random {
+  color: white;
+  display: block;
+  margin-top: 10px;
+  text-decoration: none;
 }
 
-abbr[title], dfn[title] {
-    border-bottom:1px dotted;
-    cursor:help;
+#random:hover{
+  text-decoration:underline;
 }
 
-table {
-    border-collapse:collapse;
-    border-spacing:0;
+h1 {
+  color: white;
+  font-family: 'Roboto Slab', serif;
 }
 
-hr {
-    display:block;
-    height:1px;
-    border:0;   
-    border-top:1px solid #cccccc;
-    margin:1em 0;
-    padding:0;
+h2 {
+  text-align: center;
+  font-size: 20px;
 }
 
-input, select {
-    vertical-align:middle;
+#kp-icon {
+  background-image: url(http://kurtpetrek.com/random/images/kp-icon.png);
+  background-color: rgba(255,255,255,0.5);
+  border-radius: 5px 5px 5px 5px;
+  background-size: cover;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  right: 15px;
+  top: 15px;
 }
 
-*/
